# claude-agent-sdk

./: .clippy.toml  .env.example  .gitignore  .gitmodules  .rustfmt.toml  AUTO_INSTALL.md  CONTRIBUTING.md  Cargo.toml  DOCS_INDEX.md  FINAL_PERFORMANCE_REPORT.md  IMPLEMENTATION_SUMMARY.md  Justfile  Makefile  PERFORMANCE_TEST_SUMMARY.md  README.md  README.zh-CN.md  _typos.toml  benchmark_results.md  build.rs  deny.toml
.cargo/: config.toml
.serena/: project.yml
crates/claude-agent-sdk/: Cargo.toml
crates/claude-agent-sdk/examples/: 01_hello_world.rs  02_limit_tool_use.rs  03_monitor_tools.rs  06_bidirectional_client.rs  07_dynamic_control.rs  10_include_partial_messages.rs  11_setting_sources.rs  13_system_prompt.rs  14_streaming_mode.rs  16_session_management.rs  17_fallback_model.rs  18_max_budget_usd.rs  19_max_thinking_tokens.rs  20_query_stream.rs  23_image_input.rs  30_agent_skills.rs  30_agent_skills_simple.rs  31_agent_skills_persistence.rs  32_agent_skills_discovery.rs  33_agent_skills_resources.rs  34_agent_skills_dependency.rs  35_agent_skills_version.rs  36_agent_skills_tags.rs  37_agent_skills_yaml.rs  38_agent_skills_hot_reload.rs  39_agent_skills_sandbox.rs  40_agent_skills_performance.rs  41_agent_skills_vscode.rs  43_error_handling.rs  46_advanced_errors.rs  47_testing_patterns.rs  48_memory_management.rs  48_performance_benchmarking.rs  49_testing_strategies.rs  50_integration_tests.rs  MCP_INTEGRATION.md  README.md  auto_install_cli.rs
crates/claude-agent-sdk/examples/archived/: complete_investment_analysis.rs  test_skill_agent.rs  test_skills.rs
crates/claude-agent-sdk/examples/wasm/: README.md  simple.html
crates/claude-agent-sdk/examples/wasm/react-app/: package.json  vite.config.js
crates/claude-agent-sdk/examples/wasm/react-app/src/: App.jsx
crates/claude-agent-sdk/src/: client.rs  lib.rs  query.rs  version.rs
crates/claude-agent-sdk/src/commands/: mod.rs
crates/claude-agent-sdk/src/internal/: cli_installer.rs  mod.rs  query_full.rs
crates/claude-agent-sdk/src/internal/transport/: subprocess.rs
crates/claude-agent-sdk/src/mcp/: mod.rs  tasks.rs
crates/claude-agent-sdk/src/observability/: logger.rs  metrics.rs  mod.rs
crates/claude-agent-sdk/src/orchestration/: mod.rs  orchestrator.rs  registry.rs
crates/claude-agent-sdk/src/orchestration/patterns/: parallel.rs  sequential.rs
crates/claude-agent-sdk/src/skills/: api.rs  auditor.rs  dependency.rs  hot_reload.rs  integration_tests.rs  mod.rs  progressive_disclosure.rs  registry.rs  sandbox.rs  skill_md.rs  tests.rs  tool_restriction.rs  types.rs  version.rs  vscode.rs
crates/claude-agent-sdk/src/subagents/: mod.rs
crates/claude-agent-sdk/src/todos/: mod.rs
crates/claude-agent-sdk/src/types/: config.rs  hooks.rs  messages.rs  plugin.rs
crates/claude-agent-sdk/src/v2/: mod.rs  session.rs  types.rs
docs/: README.md  ROADMAP_2025.md  index.md
docs/api/: public-api.md
docs/architecture/: agents.md  orchestration.md  overview.md  skills.md
docs/development/: setup.md
docs/plan/: plan2.0.md
scripts/: test_auto_install.sh
(+23 files in other folders)
