[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Loumos AI"]
license = "MIT"
repository = "https://github.com/louloulin/claude-agent-sdk"
homepage = "https://github.com/louloulin/claude-agent-sdk"

[workspace.dependencies]
# === Async Runtime ===
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9" }

# === Error Handling ===
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

# === Utilities ===
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.11"
tracing = "0.1"
indexmap = "2.2"
semver = "1.0"
paste = "1.0"
typed-builder = "0.18"

# === SDK Dependencies ===
claude-agent-sdk = { path = "crates/claude-agent-sdk" }

# === Trading & Data ===
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# === Dev Dependencies ===
tokio-test = "0.4"
tempfile = "3.4"
criterion = "0.5"
